# fulcra-context-mcp

./: AGENTS.md  README.md  pyproject.toml
fulcra_mcp/: main.py
